# amqpcpp-client

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
rabbitmq/: docker-compose.yml
src/: main.cpp
